[package]
name = "cxx-qt-extensions"
version = "0.1.0"
edition = "2021"
license = "MIT"
links = "cxx-qt-extensions"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
too_many_arguments = "allow"

[dependencies.cxx]
version = "1.0.126"

[dependencies.cxx-qt-lib]
version = "0.6.1"

[dependencies.uuid]
version = "1.1.0"
optional = true

[build-dependencies.cxx-build]
version = "1.0.126"

[build-dependencies.qt-build-utils]
version = "0.6.1"

[build-dependencies.cxx-qt-extensions-headers]
path = "../cxx-qt-extensions-headers"

[build-dependencies.cxx-qt-lib-headers]
version = "0.6.1"

[features]
uuid = ["dep:uuid"]
